<resources>
    <string name="app_name">Submit1</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="ex1">Exercise 1</string>
    <string name="ex2">Exercise 2</string>
    <string name="ex3">Exercise 3</string>
    <string name="ex4">Exercise 4</string>
    <string name="ex5">Exercise 5</string>
    <string name="title_activity_ex1">Random Generator</string>
    <string name="random_button_name">New Random</string>
    <string name="title_activity_ex2">BMI Calculator</string>
    <string name="length">Length in cm:</string>
    <string name="weight">Weight in kg:</string>
    <string name="bmi">Your BMI is: </string>
    <string name="compute_button">Compute</string>
    <string name="reset_button">Reset</string>
    <string name="title_activity_ex3">MyCountries</string>
    <string name="title_activity_detail">Detail</string>
    <string name="action_addcountry">Add Country</string>
    <string name="action_add">Add</string>
    <string name="action_cancel">Cancel</string>
    <string name="main_label">My Countries</string>
    <string name="title_activity_ex4">VaxjoWeather</string>
    <string name="title_activity_ex5">BeerPager</string>
    <string name="title">Beer 1 out of 7</string>
    <string name="beerLabel">Beer:</string>
    <string name="ratingLabel">Rating:</string>
    <string name="styleLabel">Style:</string>
    <string name="ABVLabel">ABV:</string>
    <string name="breweryLabel">Brewery:</string>
    <string name="reviewLabel">Review:</string>
</resources>
