<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">


    <Button
        android:id="@+id/ex1Button"
        android:layout_width="225dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView"
        android:layout_gravity="center"
        android:onClick="doEx1"
        android:text="@string/ex1" />

    <Button
        android:id="@+id/ex2Button"
        android:layout_width="225dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView"
        android:layout_gravity="center"
        android:onClick="doEx2"
        android:text="@string/ex2" />


    <Button
        android:id="@+id/ex3Button"
        android:layout_width="225dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView2"
        android:layout_gravity="center"
        android:onClick="doEx3"
        android:text="@string/ex3" />

    <Button
        android:id="@+id/ex4Button"
        android:layout_width="225dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView3"
        android:layout_gravity="center"
        android:onClick="doEx4"
        android:text="@string/ex4" />

    <Button
        android:id="@+id/ex5Button"
        android:layout_width="225dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView4"
        android:layout_gravity="center"
        android:onClick="doEx5"
        android:text="@string/ex5" />


</LinearLayout>
