<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/ivViewPager"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="24dp"
            android:background="#000000"
            android:padding="1dp"
            android:scaleType="fitXY" />


        <!-- beer -->
        <TextView
            android:id="@+id/beerLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/ivViewPager"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="8dp"
            android:text="@string/beerLabel"
            android:textColor="@android:color/black"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/beer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/ivViewPager"
            android:layout_alignTop="@+id/beerLabel"
            android:textColor="@android:color/black"
            android:textSize="16sp" />

        <!-- rating -->
        <TextView
            android:id="@+id/ratingLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/beerLabel"
            android:layout_below="@+id/beerLabel"
            android:text="@string/ratingLabel"
            android:textColor="@android:color/black"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/rating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/ratingLabel"
            android:layout_alignStart="@+id/ivViewPager"
            android:textColor="@android:color/black"
            android:textSize="16sp" />

        <!-- style -->
        <TextView
            android:id="@+id/StyleLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/ratingLabel"
            android:layout_below="@+id/ratingLabel"
            android:text="@string/styleLabel"
            android:textColor="@android:color/black"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/StyleLabel"
            android:layout_alignStart="@+id/ivViewPager"
            android:textColor="@android:color/black"
            android:textSize="16sp" />

        <!-- ABV -->
        <TextView
            android:id="@+id/ABVLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/StyleLabel"
            android:layout_below="@+id/StyleLabel"
            android:text="@string/ABVLabel"
            android:textColor="@android:color/black"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/abv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/ABVLabel"
            android:layout_alignStart="@+id/ivViewPager"
            android:textColor="@android:color/black"
            android:textSize="16sp" />

        <!-- brewery -->
        <TextView
            android:id="@+id/breweryLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/ABVLabel"
            android:layout_below="@+id/ABVLabel"
            android:text="@string/breweryLabel"
            android:textColor="@android:color/black"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/brewery"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/breweryLabel"
            android:layout_alignStart="@+id/ivViewPager"
            android:textColor="@android:color/black"
            android:textSize="16sp" />

        <!-- review -->
        <TextView
            android:id="@+id/reviewLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/breweryLabel"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="38dp"
            android:text="@string/reviewLabel"
            android:textColor="@android:color/black"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/review"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/reviewLabel"
            android:layout_marginRight="16dp"
            android:layout_alignStart="@+id/ivViewPager"
            android:scrollbars="vertical"
            android:textColor="@android:color/black"
            android:textSize="16sp" />

    </RelativeLayout>


</ScrollView>

